# polaris-rt

./: CMakeLists.txt  DEVELOPMENT_LOG.txt  PROGRESS_2026_03_18.txt  README.md  build.bat  build_log.txt
layer/: layer.cpp  polaris_rt_layer.def  polaris_rt_layer.json.in
shaders/: ray_traversal.comp
test_app/: main.cpp
